force-app/main/default/objects/Master_Provision_Fee__c/Master_Provision_Fee__c.object-meta.xml
<CustomObject>
    <description>Provision Fee</description>
    <label>Master Provision Fee</label>
    <nameField>
        <label>Master Provision Fee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Provision Fee</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>