force-app/main/default/objects/Master_Provision_Fee__c/fields/tenor_min__c.field-meta.xml
<CustomField>
    <fullName>tenor_min__c</fullName>
    <label>tenor_min</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>